# lib/schema/gen/go/api/core/v1/candle.pb.go
@@ -1,0 +1,188 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.36.7
+// 	protoc        (unknown)
+// source: api/core/v1/candle.proto
+
+package corev1
+
+import (
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	timestamppb "google.golang.org/protobuf/types/known/timestamppb"
+	reflect "reflect"
+	sync "sync"
+	unsafe "unsafe"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type Candle struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Ticker        string                 `protobuf:"bytes,1,opt,name=ticker,proto3" json:"ticker,omitempty"`
+	Interval      string                 `protobuf:"bytes,2,opt,name=interval,proto3" json:"interval,omitempty"`
+	Open          float64                `protobuf:"fixed64,4,opt,name=open,proto3" json:"open,omitempty"`
+	High          float64                `protobuf:"fixed64,5,opt,name=high,proto3" json:"high,omitempty"`
+	Low           float64                `protobuf:"fixed64,6,opt,name=low,proto3" json:"low,omitempty"`
+	Close         float64                `protobuf:"fixed64,7,opt,name=close,proto3" json:"close,omitempty"`
+	Volume        float64                `protobuf:"fixed64,8,opt,name=volume,proto3" json:"volume,omitempty"`
+	Time          *timestamppb.Timestamp `protobuf:"bytes,3,opt,name=time,proto3" json:"time,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *Candle) Reset() {
+	*x = Candle{}
+	mi := &file_api_core_v1_candle_proto_msgTypes[0]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *Candle) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*Candle) ProtoMessage() {}
+
+func (x *Candle) ProtoReflect() protoreflect.Message {
+	mi := &file_api_core_v1_candle_proto_msgTypes[0]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use Candle.ProtoReflect.Descriptor instead.
+func (*Candle) Descriptor() ([]byte, []int) {
+	return file_api_core_v1_candle_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *Candle) GetTicker() string {
+	if x != nil {
+		return x.Ticker
+	}
+	return ""
+}
+
+func (x *Candle) GetInterval() string {
+	if x != nil {
+		return x.Interval
+	}
+	return ""
+}
+
+func (x *Candle) GetOpen() float64 {
+	if x != nil {
+		return x.Open
+	}
+	return 0
+}
+
+func (x *Candle) GetHigh() float64 {
+	if x != nil {
+		return x.High
+	}
+	return 0
+}
+
+func (x *Candle) GetLow() float64 {
+	if x != nil {
+		return x.Low
+	}
+	return 0
+}
+
+func (x *Candle) GetClose() float64 {
+	if x != nil {
+		return x.Close
+	}
+	return 0
+}
+
+func (x *Candle) GetVolume() float64 {
+	if x != nil {
+		return x.Volume
+	}
+	return 0
+}
+
+func (x *Candle) GetTime() *timestamppb.Timestamp {
+	if x != nil {
+		return x.Time
+	}
+	return nil
+}
+
+var File_api_core_v1_candle_proto protoreflect.FileDescriptor
+
+const file_api_core_v1_candle_proto_rawDesc = "" +
+	"\n" +
+	"\x18api/core/v1/candle.proto\x12\vapi.core.v1\x1a\x1fgoogle/protobuf/timestamp.proto\"\xd4\x01\n" +
+	"\x06Candle\x12\x16\n" +
+	"\x06ticker\x18\x01 \x01(\tR\x06ticker\x12\x1a\n" +
+	"\binterval\x18\x02 \x01(\tR\binterval\x12\x12\n" +
+	"\x04open\x18\x04 \x01(\x01R\x04open\x12\x12\n" +
+	"\x04high\x18\x05 \x01(\x01R\x04high\x12\x10\n" +
+	"\x03low\x18\x06 \x01(\x01R\x03low\x12\x14\n" +
+	"\x05close\x18\a \x01(\x01R\x05close\x12\x16\n" +
+	"\x06volume\x18\b \x01(\x01R\x06volume\x12.\n" +
+	"\x04time\x18\x03 \x01(\v2\x1a.google.protobuf.TimestampR\x04timeB5Z3market-tracker/lib/schema/gen/go/api/core/v1;corev1b\x06proto3"
+
+var (
+	file_api_core_v1_candle_proto_rawDescOnce sync.Once
+	file_api_core_v1_candle_proto_rawDescData []byte
+)
+
+func file_api_core_v1_candle_proto_rawDescGZIP() []byte {
+	file_api_core_v1_candle_proto_rawDescOnce.Do(func() {
+		file_api_core_v1_candle_proto_rawDescData = protoimpl.X.CompressGZIP(unsafe.Slice(unsafe.StringData(file_api_core_v1_candle_proto_rawDesc), len(file_api_core_v1_candle_proto_rawDesc)))
+	})
+	return file_api_core_v1_candle_proto_rawDescData
+}
+
+var file_api_core_v1_candle_proto_msgTypes = make([]protoimpl.MessageInfo, 1)
+var file_api_core_v1_candle_proto_goTypes = []any{
+	(*Candle)(nil),                // 0: api.core.v1.Candle
+	(*timestamppb.Timestamp)(nil), // 1: google.protobuf.Timestamp
+}
+var file_api_core_v1_candle_proto_depIdxs = []int32{
+	1, // 0: api.core.v1.Candle.time:type_name -> google.protobuf.Timestamp
+	1, // [1:1] is the sub-list for method output_type
+	1, // [1:1] is the sub-list for method input_type
+	1, // [1:1] is the sub-list for extension type_name
+	1, // [1:1] is the sub-list for extension extendee
+	0, // [0:1] is the sub-list for field type_name
+}
+
+func init() { file_api_core_v1_candle_proto_init() }
+func file_api_core_v1_candle_proto_init() {
+	if File_api_core_v1_candle_proto != nil {
+		return
+	}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: unsafe.Slice(unsafe.StringData(file_api_core_v1_candle_proto_rawDesc), len(file_api_core_v1_candle_proto_rawDesc)),
+			NumEnums:      0,
+			NumMessages:   1,
+			NumExtensions: 0,
+			NumServices:   0,
+		},
+		GoTypes:           file_api_core_v1_candle_proto_goTypes,
+		DependencyIndexes: file_api_core_v1_candle_proto_depIdxs,
+		MessageInfos:      file_api_core_v1_candle_proto_msgTypes,
+	}.Build()
+	File_api_core_v1_candle_proto = out.File
+	file_api_core_v1_candle_proto_goTypes = nil
+	file_api_core_v1_candle_proto_depIdxs = nil
+}
